opam-version: "2.0"
authors:      ["Lucas Pluvinage"]
maintainer:   "Lucas Pluvinage"
license:      "ISC"
synopsis:     "Mirage Xen implementation of nocrypto"

build: [ ["dune" "subst"] {pinned}
         ["dune" "build" "-p" name "-j" jobs ]
         ["dune" "runtest"] {with-test} ]

depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build & >= "1.9"}
  "nocrypto"
  "mirage-xen" { >= "2.2.0" }
]

